# MLX8-WS-Audio-Transformer

./: .gitignore  README.md
.charles/: .env.example  README.md  chords2midi.py  midi2spectrogram.py  pyproject.toml  spectrogram.py  spectrogram_wo_CLS.py  urbansound8k_sql.md
.charles/music2midi/: .env.example  README.md  chopping.diff  dataset.py  inference.py  logger_utils.py  model.py  music2abc2mid_sql.md  preprocess_data.py  train.py
.charles/music2midi/test/: README.md  abc_tokens.py  music21_tests.py  qwen2_audio_tests.py
.charles/samples/: alan_walker_-_faded.abc  alan_walker_-_faded_cut_10.0s.mid  alan_walker_-_the_spectre.mid  alan_walker_-_the_spectre_fluidsynth_00_08s.abc  alan_walker_-_tired.abc  alan_walker_-_tired.mid  samples_chord_progression.mid
.charles/samples/cut_midi_failed/: __cut__1.mid  __cut__2.mid  __cut__3.mid  __cut__4.mid
.charles/wandb/: latest-run
.charles/wandb/run-20250707_180331-87irquva/: run-87irquva.wandb
.charles/wandb/run-20250707_180331-87irquva/files/: config.yaml  requirements.txt  wandb-metadata.json
.charles/wandb/run-20250707_181444-dpvmoix4/: run-dpvmoix4.wandb
.charles/wandb/run-20250707_181444-dpvmoix4/files/: config.yaml  wandb-metadata.json  wandb-summary.json
.charles/wandb/run-20250707_181531-oiuwldqj/: run-oiuwldqj.wandb
.charles/wandb/run-20250707_181531-oiuwldqj/files/: config.yaml  wandb-metadata.json  wandb-summary.json
.charles/wandb/run-20250708_111709-qp6j2rhd/: run-qp6j2rhd.wandb
.charles/wandb/run-20250708_111709-qp6j2rhd/files/: config.yaml  wandb-metadata.json  wandb-summary.json
.charles/wandb/run-20250708_111951-ppq0ffvi/: run-ppq0ffvi.wandb
.charles/wandb/run-20250708_111951-ppq0ffvi/files/: config.yaml  wandb-metadata.json  wandb-summary.json
.charles/wandb/run-20250708_112102-gvp4p91l/: run-gvp4p91l.wandb
.charles/wandb/run-20250708_113120-5rbjxurl/: run-5rbjxurl.wandb
.charles/wandb/run-20250708_113401-wg475xej/: run-wg475xej.wandb
.charles/wandb/run-20250708_113718-zpbui8ng/: run-zpbui8ng.wandb
.charles/wandb/run-20250708_114006-5p8ugfy7/: run-5p8ugfy7.wandb
.charles/wandb/run-20250708_114151-jxowwrzz/: run-jxowwrzz.wandb
.charles/wandb/run-20250708_114356-54hk1dme/: run-54hk1dme.wandb
AB/: AB.py  Mobile_0400_lite.sf2  Tetris SoundFont.sf2  exampleDataCollator.py  fineTune.py  fineTuneMidi.py  fineTuneMidiTester.py  main.py  memoToWav.py  midiDatasetGen.py  midiDatasetResults.csv  mididataset.csv  piano_full_range.mid  pyproject.toml  synthDataset.py  transcriptions.csv  transcriptions2.csv  wavToWhisper.py
AB/UI/: Asmo.py
course-materials/: README.md
(+22 files in other folders)
