[project]
name = "ab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.33.2",
    "matplotlib>=3.10.3",
    "openai-whisper>=20250625",
    "streamlit>=1.46.1",
    "torch>=2.7.1",
    "transformers>=4.53.1",
    "wandb>=0.21.0",
]
